@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1204 2010-05-07 19:11:13 mb Exp $
+# $Id: CHANGES,v 1.1205 2010-05-07 19:32:38 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta1 (2010/??/??)
+ - (2010/05/07) Fixed bug#5005 - 'Statuses' is not correct in British English.
  - (2010/05/06) Implemented bug#3516 - added CustomerGroupSupport feature for
     customer navigation bar. Kudos Martin Balzarek.
  - (2010/05/04) Fixed bug#5249 - ArticleStorageFS should not die on failed rm.
